...
  String usuario,
  String correo,
  String password,
  String confirmPassword,
) async {
  if (correo.isEmpty || usuario.isEmpty || password.isEmpty || confirmPassword.isEmpty) {
    return 'Ingresa los datos faltantes.';
  }

  if (!isValidEmail(correo)) {
    return 'Ingresa un correo válido';
  }

...

  if (usernameCheck.docs.isNotEmpty) {
    return 'Usuario ya se encuentra en uso';
  }

  if (password != confirmPassword) {
    return 'Las contraseñas no son iguales';
  }

  if (password.length < 6) {
    return 'Contraseña debe tener 6 caracteres o más';
  }

...
      password: password,
    );
    createUserDatabase(userCredential.user!.uid, usuario, correo);
    return 'ok';
  } on FirebaseAuthException catch (e) {
    if (e.code == 'email-already-in-use') {
      return 'Correo ya se encuentra en uso';
    }
    return 'Error desconocido';
  }
}

Future<void> registrarUsuario(
...
